--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1282,7 +1282,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>alcdelay=500 keepsyms=1 -disablegfxfirmware -brcmfx-country=#a brcmfx-driver=2</string>
+				<string>-wegnoegpu alcdelay=500 keepsyms=1 -disablegfxfirmware -brcmfx-country=#a brcmfx-driver=2</string>
 				<key>run-efi-updater</key>
 				<string>No</string>
 				<key>csr-active-config</key>
